--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.12.0",
     "react-player": "^2.14.1",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
