--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "contentful": "^10.6.14",
     "embla-carousel-react": "^8.0.0-rc17",
+    "framer-motion": "^12.4.2",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
